processed/gerrit/txt/38256.txt
Change:     38256
Subject:    LU-11310 ldiskfs: Repair support for SUSE 15 GA and SP1
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/38256
Change-Id:  I76077feec52097345647048cefd2bb375c72e35e
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Neil Brown
Created:    2020-04-16 05:50:52.000000000
Updated:    2020-05-14 05:41:05.000000000
Patch Set:  7
Insertions: +3708
Deletions:  -5
Comments:   6 (0 unresolved)

--- Labels ---
  Code-Review: Shaun Tancheff: +1; Alex Zhuravlev: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Alex Zhuravlev, James Simmons, Neil Brown, Petros Koutoupis, Shaun Tancheff

--- Commit Message ---
LU-11310 ldiskfs: Repair support for SUSE 15 GA and SP1

At about the same time that support for SLE15 was added, some of the
patches mentioned in the series were removed by a separate patch.

This patch restores correct compiltation for ldiskfs with SUSE 4.12
kernels.

Specifically
     SLE15-LTSS release 4.12.14-150.47
     and 4.12.14-150.22
and
     SLES15-SP1 release 4.12.14-197.37
     and 4.12.14-197.7
which are the current releases as of 2020-apr-21 that  are supported.

Test-Parameters: trivial
Fixes: fc87b01f96e8 ("LU-12477 ldiskfs: remove obsolete ext4 patches")
Fixes: 862e9bf632dc ("LU-11310 ldiskfs: Support for SUSE 15 GA and SP1")
Signed-off-by: Mr NeilBrown <neilb@suse.de>
Change-Id: I76077feec52097345647048cefd2bb375c72e35e
Reviewed-on: https://review.whamcloud.com/38256
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Neil Brown, 2020-04-16 05:50:52.000000000) ---
Uploaded patch set 1.

--- Message (Neil Brown, 2020-04-16 05:52:09.000000000) ---
Uploaded patch set 2: Commit message was updated.

--- Message (jenkins, 2020-04-16 05:52:10.000000000) ---
Patch Set 1:

No Builds Executed

--- Message (wc-checkpatch, 2020-04-16 05:55:17.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Autotest, 2020-04-16 11:48:03.000000000) ---
Patch Set 2:

AT Release Candidate started enforced review-ldiskfs-dne session for build 73394.

--- Message (jenkins, 2020-04-16 12:04:34.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/73394/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews-patchless/13467/ : SUCCESS

--- Message (James Simmons, 2020-04-16 14:18:05.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Shaun Tancheff, 2020-04-16 14:34:30.000000000) ---
Patch Set 2:

I'm getting this (against linux-4.12.14-150.22 and -197.7:

Applying patch patches/suse15/ext4-attach-jinode-in-writepages.patch
1 out of 3 hunks FAILED
Patch patches/suse15/ext4-attach-jinode-in-writepages.patch does not apply (enforce with -f)
make[2]: *** [autoMakefile:624: sources] Error 1

I checked 4.12.14-197.37 and that needs a few patches to be fixed)

--- Message (Shaun Tancheff, 2020-04-16 15:56:07.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Andreas Dilger, 2020-04-16 21:18:25.000000000) ---
Patch Set 2: Code-Review-1

(3 comments)

I'm going to mark this -1 based on Shaun's comments, assuming that we want this to be usable for both SLES15 and SLES15sp1.

--- Message (Shaun Tancheff, 2020-04-16 21:55:05.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Neil Brown, 2020-04-21 06:00:22.000000000) ---
Uploaded patch set 3.

--- Message (wc-checkpatch, 2020-04-21 06:01:31.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (jenkins, 2020-04-21 06:34:26.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/73522/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews-patchless/13582/ : SUCCESS

--- Message (Autotest, 2020-04-21 06:35:46.000000000) ---
Patch Set 3:

Onyx Autotest started enforced review-ldiskfs-dne session for build 73522.

--- Message (Shaun Tancheff, 2020-04-21 20:04:24.000000000) ---
Patch Set 3:

Well the patches apply but the build fails:
   --with-linux=/usr/src/linux-4.12.14-197.37

/home/shaun/lustre-release/ldiskfs/xattr.c:330:46: error: macro "ldiskfs_iget" requires 3 arguments, but only 2 given
  ea_inode = ldiskfs_iget(parent->i_sb, ea_ino);
                                              ^
/home/shaun/lustre-release/ldiskfs/xattr.c:330:13: error: ‘ldiskfs_iget’ undeclared (first use in this function); did you mean ‘__ldiskfs_iget’?
  ea_inode = ldiskfs_iget(parent->i_sb, ea_ino);
             ^~~~~~~~~~~~
             __ldiskfs_iget

--- Message (Shaun Tancheff, 2020-04-21 20:32:35.000000000) ---
Patch Set 3: Code-Review-1

Sadly the patches do not stack using --with-linux=/usr/src/linux-4.12.14-150.22

Applying patch patches/suse15/ext4-attach-jinode-in-writepages.patch
1 out of 3 hunks FAILED
Patch patches/suse15/ext4-attach-jinode-in-writepages.patch does not apply (enforce with -f)
make[2]: *** [autoMakefile:624: sources] Error 1

--- Message (Neil Brown, 2020-04-30 01:45:18.000000000) ---
Patch Set 3:

> Sadly the patches do not stack using --with-linux=/usr/src/linux-4.12.14-150.22

Sadly 4.12.14-150.22 is an ancient release - June last year.
rpm-4.12.14-150.47 seems to be the last SLE15 release before it entered LTSS.

Why are you still using 4.12.14-150.22 ??
What is the policy on supporting older releases?
It would actually suit me to always support the first release of any given SLE service pack as that it what we build KMPs against for the life of the SP.

So I can make it work for other releases, but I'd like to know what the goal is.

--- Message (Shaun Tancheff, 2020-04-30 03:04:01.000000000) ---
Patch Set 3:

Right now 4.12.14-197.7 is still pretty active here same problem as 150 though.

Since this is relatively current with CLE7 I suspect we will be supporting for quite a while though I don't know the official policy.

--- Message (Neil Brown, 2020-04-30 03:58:58.000000000) ---
Uploaded patch set 4.

--- Message (wc-checkpatch, 2020-04-30 03:59:09.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-04-30 04:05:00.000000000) ---
Patch Set 4:

Code-wise looks good to me.

--- Message (Neil Brown, 2020-04-30 04:12:38.000000000) ---
Uploaded patch set 5: Commit message was updated.

--- Message (jenkins, 2020-04-30 04:12:39.000000000) ---
Patch Set 4: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/13792/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/73739/ : ABORTED

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-04-30 04:14:13.000000000) ---
Patch Set 5:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2020-04-30 04:14:20.000000000) ---
Patch Set 5:

Looks good to me.

--- Message (jenkins, 2020-04-30 04:47:49.000000000) ---
Patch Set 5: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/13793/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/73740/ : SUCCESS

--- Message (Autotest, 2020-04-30 04:48:59.000000000) ---
Patch Set 5:

Trevis Autotest2 started enforced review-ldiskfs-dne session for build 73740.

--- Message (Neil Brown, 2020-05-01 04:15:43.000000000) ---
Uploaded patch set 6.

--- Message (wc-checkpatch, 2020-05-01 04:19:24.000000000) ---
Patch Set 6:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-05-01 04:20:53.000000000) ---
Patch Set 6:

Code-wise looks good to me.

--- Message (Neil Brown, 2020-05-01 04:24:32.000000000) ---
Patch Set 6:

(1 comment)

This version definitely builds on all 4 releases mentioned in the Commit Message :-)

--- Message (Autotest, 2020-05-01 04:46:25.000000000) ---
Patch Set 6:

Trevis Autotest2 started enforced review-ldiskfs-dne session for build 73789.

--- Message (jenkins, 2020-05-01 04:53:54.000000000) ---
Patch Set 6: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/73789/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews-patchless/13843/ : SUCCESS

--- Message (Alex Zhuravlev, 2020-05-06 18:36:50.000000000) ---
Patch Set 6: Code-Review+1

--- Message (Shaun Tancheff, 2020-05-06 22:55:03.000000000) ---
Patch Set 6: Code-Review+1

--- Message (Oleg Drokin, 2020-05-14 05:22:44.000000000) ---
Patch Set 6: Code-Review+2

--- Message (unknown, 2020-05-14 05:41:05.000000000) ---
Change has been successfully cherry-picked as 46ed28c0d10ab2edeb95e6e0f50b254fb98fa8c6 by Oleg Drokin
